johnd0e 13.12.2021 16:00:00 +0200 - build 767

1. More introspection with new function mf.EnumScript.

2. MacroBrowser is now able to list such entities as well:
   - Items of Plugins menu
   - Prefixes
   - Panel modules
   - Content columns
   - Custom sort modes

drkns 04.12.2021 22:32:15 +0000 - build 766

1. Preserve console mode in win.system().

johnd0e 06.09.2021 12:00:00 +0200 - build 765

1. Remove unnecessary metatables access restrictions when creating global 
   MacroAPI tables (Area, Editor, etc.)
   (patch from shmuel).

johnd0e 20.07.2021 12:00:00 +0200 - build 764

1. LuaFAR: DM_GETDLGDATA / DM_SETDLGDATA are "no-ops" now: ignore parameters and return nil.
   (patch from shmuel).

johnd0e 30.04.2021 12:17:00 +0200 - build 763

1. LuaFAR: fix file:seek() for files larger than 2 GB
   (patch from shmuel).

johnd0e 10.04.2021 19:37:46 +0300 - build 762

1. LuaFAR: minor fix (from shmuel):
   panel.GetPanelInfo \ PluginHandle is light userdata now
   and doesn't require rawhandle() method.

johnd0e 15.01.2021 10:12:00 +0200 - build 761

1. LuaFAR: update luautf8 library to 0.1.3-2-g5627e17.

shmuel 09.09.2020 21:29:21 +0300 - build 760

1. LuaFAR: continued 751 (minor changes).

shmuel 06.09.2020 22:56:38 +0300 - build 759

1. LuaFAR: revert 756.

shmuel 05.09.2020 16:53:54 +0300 - build 758

1. LuaFAR: continued 751.

shmuel 31.08.2020 12:07:03 +0300 - build 757

1. LuaFAR: continued 751.

shmuel 26.08.2020 17:44:40 +0200 - build 756

1. LuaFAR: refactoring.

shmuel 20.08.2020 20:11:34 +0300 - build 755

1. Correct argument safety check in LoadCustomSortMode().

shmuel 20.08.2020 19:28:27 +0300 - build 754

1. Revert changes (except farapi.lua) made in 753.

drkns 19.08.2020 22:34:11 +0100 - build 753

1. Adaptation to Far 3.0.5655.

shmuel 15.08.2020 21:20:57 +0300 - build 752

1. LuaFAR: VS warning + whitespace formatting.

shmuel 01.08.2020 14:45:37 +0200 - build 751

1. LuaFAR: preparations for search in plugins' directories.
