@@ -1,3 +1,7 @@
+drkns 21.12.2021 17:10:10 +0000 - build 768
+
+1. Error in win.MoveFile.
+
 johnd0e 13.12.2021 16:00:00 +0200 - build 767
 
 1. More introspection with new function mf.EnumScript.
